fix: avoid scroll bouncing in unwanted places on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ html, body {
     max-width: 100%;
     height: 100%;
     max-height: 100%;
+    position:fixed;
     text-align: center;
     overflow: hidden;
     overflow: hidden;
